app-parksmap/parksmap-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: parksmap
spec:
  finalizers:
  - kubernetes
