app-parksmap/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: parksmap
  name: parksmap
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: parksmap
    weight: 100
